# zero-cdp

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  bare-cdp.example.json  bare_cdp.py  pyproject.toml  zero_cdp.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  live-chrome.yml
docs/: configuration.md  limitations.md  security.md
examples/: basic_navigate_extract.py  config_driven.py  form_fill.py  launch_and_screenshot.py  raw_cdp_call.py
tests/: test_bare_cdp.py  test_live_chrome.py  test_zero_cdp.py
