[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bare-cdp"
version = "0.1.0"
description = "Bare-metal Chrome DevTools Protocol automation for Python with zero runtime dependencies."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "BareCDP contributors"}]
keywords = ["chrome", "chromium", "cdp", "devtools", "browser-automation", "stdlib", "zero-dependency"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/0xTitanas/bare-cdp"
Repository = "https://github.com/0xTitanas/bare-cdp"
Issues = "https://github.com/0xTitanas/bare-cdp/issues"

[tool.setuptools]
py-modules = ["bare_cdp"]
