[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "zero-cdp"
version = "0.2.3"
description = "Zero-dependency Chrome DevTools Protocol automation for Python."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{name = "ZeroCDP contributors"}]
keywords = ["chrome", "chromium", "cdp", "devtools", "browser-automation", "stdlib", "zero-dependency"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
]
dependencies = []

[project.scripts]
zero-cdp = "zero_cdp:main"

[project.urls]
Homepage = "https://github.com/0xTitanas/zero-cdp"
Repository = "https://github.com/0xTitanas/zero-cdp"
Issues = "https://github.com/0xTitanas/zero-cdp/issues"

[tool.setuptools]
py-modules = ["zero_cdp"]
